--- a/projects/app-test/src/app/app.component.html
+++ b/projects/app-test/src/app/app.component.html
@@ -1,8 +1,11 @@
-<div style="width: 100%; height: 500px;">
+<div style="width: 100%; height: 100vh;">
   <nolm-map [map]="map">
     <nolm-map-controls>
-      <div [map]="map" [nolmMapControl]="{style: 'top: 0.5em; left: 2.5em; opacity: 0.5;'}">
+      <div [map]="map" [nolmMapControl]="{style: 'bottom: 0.5em; left: 0.5em; opacity: 0.5;'}">
         <mat-slide-toggle>Toggle me!</mat-slide-toggle>
+      </div>
+      <div [map]="map" [nolmMapControl]="{style: 'top: 0.5em; left: 2.5em; opacity: 0.5;'}">
+        <nolm-layer-tree-button [map]="map"></nolm-layer-tree-button>
       </div>
     </nolm-map-controls>
   </nolm-map>
