--- a/projects/mapuiexts/ng-ol-material/src/lib/components/button/layer/layer-tree-button/layer-tree-button.component.html
+++ b/projects/mapuiexts/ng-ol-material/src/lib/components/button/layer/layer-tree-button/layer-tree-button.component.html
@@ -1,3 +1,3 @@
 <button mat-mini-fab (click)="open()" matTooltip="Layers">
-    <mat-icon aria-hidden="false" aria-label="tree layer">menu</mat-icon>
+    <mat-icon aria-hidden="false" aria-label="tree layer">layers</mat-icon>
 </button>
